# playlist-manager

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  error_handler.py  production.env.example  pyproject.toml  rate_limiter.py  redis_oauth_store.py  remove_duplicates_from_playlist.py  render.env.example  render.yaml  secure_token_storage.py  sort_playlist_by_release_date.py  spotify_auth.py  spotify_client.py  web_app.py
.github/workflows/: keep-alive.yml
scripts/: check-production-config.py  generate-secret-key.py
templates/: base.html  consent.html  error.html  index.html  privacy.html  remove_duplicates.html  sort_playlist.html  terms.html
