[project]
name = "playlist-manager"
version = "0.1.0"
description = "A modern web application for managing and organizing Spotify playlists with powerful sorting and duplicate removal capabilities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "spotipy>=2.25.1",
    "python-dotenv>=1.0.0",
    "flask>=3.1.1",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "flask-session>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
